--- a/index.html
+++ b/index.html
@@ -2,98 +2,21 @@
 <html>
 <head>
   <title>Image Processor</title>
-  <style>
-    body {
-      font-family: -apple-system, system-ui, sans-serif;
-      padding: 20px;
-      max-width: 600px;
-      margin: 0 auto;
-      background: #f5f5f7;
-    }
-    .container {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .form-group {
-      margin-bottom: 15px;
-    }
-    .checkbox-label {
-      display: flex;
-      align-items: flex-start;
-      gap: 8px;
-      cursor: pointer;
-    }
-    .checkbox-label input[type="checkbox"] {
-      width: auto;
-      margin-top: 2px;
-    }
-    .help-text {
-      font-size: 12px;
-      color: #666;
-      margin-left: 4px;
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: 500;
-    }
-    input, select {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-    button {
-      background: #0066cc;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      width: 100%;
-      font-size: 16px;
-    }
-    button:hover {
-      background: #0052a3;
-    }
-    #status {
-      margin-top: 20px;
-      padding: 10px;
-      border-radius: 5px;
-    }
-    .success {
-      background: #d4edda;
-      color: #155724;
-    }
-    .error {
-      background: #f8d7da;
-      color: #721c24;
-    }
-    .drop-zone {
-      border: 2px dashed #ccc;
-      border-radius: 5px;
-      padding: 20px;
-      text-align: center;
-      margin-bottom: 20px;
-      cursor: pointer;
-    }
-    .drop-zone.drag-over {
-      border-color: #0066cc;
-      background: #f0f7ff;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h1>Image Processor</h1>
     
     <div class="drop-zone" id="dropZone">
-      <p>Drag and drop image here or click to select</p>
-      <input type="file" id="file" accept="image/*" hidden>
+      <div class="upload-prompt">
+        <p>Drag and drop image here or click to select</p>
+        <input type="file" id="file" accept="image/*" hidden>
+      </div>
+      <div class="preview-container" id="previewContainer" style="display: none;">
+        <img id="imagePreview" class="image-preview">
+        <div class="file-info" id="fileInfo"></div>
+      </div>
     </div>
 
     <div class="form-group">
@@ -114,6 +37,24 @@
       </label>
     </div>
 
+    <div class="form-group crop-position" id="cropPositionGroup" style="display: none;">
+      <label>Crop Position:</label>
+      <div class="radio-group">
+        <label class="radio-label">
+          <input type="radio" name="cropPosition" value="top" id="cropTop">
+          Top
+        </label>
+        <label class="radio-label">
+          <input type="radio" name="cropPosition" value="center" id="cropCenter" checked>
+          Center
+        </label>
+        <label class="radio-label">
+          <input type="radio" name="cropPosition" value="bottom" id="cropBottom">
+          Bottom
+        </label>
+      </div>
+    </div>
+
     <div class="form-group">
       <label for="format">Output Format:</label>
       <select id="format">
@@ -129,73 +70,18 @@
       <input type="number" id="quality" value="80" min="1" max="100">
     </div>
 
+    <div class="form-group">
+      <label for="outputFilename">Output Filename:</label>
+      <div class="filename-input-group">
+        <input type="text" id="outputFilename" placeholder="Enter filename (optional)">
+        <span class="file-extension" id="fileExtension">.webp</span>
+      </div>
+    </div>
+
     <button onclick="processImage()">Process Image</button>
     <div id="status"></div>
   </div>
 
-  <script>
-    const dropZone = document.getElementById('dropZone')
-    const fileInput = document.getElementById('file')
-
-    // Handle drag and drop
-    dropZone.addEventListener('dragover', (e) => {
-      e.preventDefault()
-      dropZone.classList.add('drag-over')
-    })
-
-    dropZone.addEventListener('dragleave', () => {
-      dropZone.classList.remove('drag-over')
-    })
-
-    dropZone.addEventListener('drop', (e) => {
-      e.preventDefault()
-      dropZone.classList.remove('drag-over')
-      fileInput.files = e.dataTransfer.files
-    })
-
-    dropZone.addEventListener('click', () => {
-      fileInput.click()
-    })
-
-    async function processImage() {
-      const width = parseInt(document.getElementById('width').value) || null
-      const height = parseInt(document.getElementById('height').value) || null
-      const format = document.getElementById('format').value
-      const quality = parseInt(document.getElementById('quality').value)
-      const cropTo16_9 = document.getElementById('cropTo16_9').checked
-      const status = document.getElementById('status')
-
-      if (!fileInput.files.length) {
-        status.className = 'error'
-        status.textContent = 'Please select an image first'
-        return
-      }
-
-      const filePath = fileInput.files[0].path
-
-      try {
-        status.textContent = 'Processing...'
-        const result = await window.electronAPI.processImage({
-          filePath,
-          width,
-          height,
-          format,
-          quality,
-          cropTo16_9
-        })
-
-        if (result.success) {
-          status.className = 'success'
-          status.textContent = `Image processed successfully! Saved to: ${result.outputPath}`
-        } else {
-          status.className = 'error'
-          status.textContent = `Error: ${result.error}`
-        }
-      } catch (error) {
-        status.className = 'error'
-        status.textContent = `Error: ${error.message}`
-      }
-    }
-  </script>
+  <script src="renderer.js"></script>
 </body>
 </html>
