--- a/another image processer/index.html
+++ b/another image processer/index.html
@@ -6,12 +6,16 @@
     <title>Image Resizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 </head>
 <body>
     <div class="container mt-5">
         <h1>Image Resizer</h1>
         <input type="file" id="imageInput" accept="image/*" class="form-control mb-3">
-        <div id="imagePreview" class="mb-3"></div>
+        <div id="imagePreviewContainer" class="mb-3">
+            <img id="imagePreview" src="" alt="Preview">
+        </div>
 
         <div class="mb-3">
             <label for="widthInput" class="form-label">Width:</label>
@@ -26,7 +30,9 @@
             <option value="original">Original</option>
             <option value="1:1">1:1</option>
             <option value="4:3">4:3</option>
-          </select>
+            <option value="16:9">16:9</option>
+            <option value="custom">Custom</option>
+        </select>
         </div>
 
         <div class="mb-3">
@@ -36,13 +42,12 @@
 
         <div class="mb-3">
           <label for="outputFormat" class="form-label">Output Format:</label>
-          <select class="form-select" id="aspectRatio">
-            <option value="original">Original</option>
-            <option value="1:1">1:1</option>
-            <option value="4:3">4:3</option>
-            <option value="16:9">16:9</option>
-            <option value="custom">Custom</option>
-        </select>
+          <select class="form-select" id="outputFormat">
+            <option value="webp">WebP</option>
+            <option value="avif">AVIF</option>
+            <option value="jpeg">JPEG</option>
+            <option value="png">PNG</option>
+          </select>
         </div>
 
         <button id="resizeButton" class="btn btn-primary">Resize/Crop</button>
